Fixing overflow & scroll issues

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -72,7 +72,6 @@ body {
 	-ms-user-select: none;
 	-o-user-select: none;
 	user-select: none;
-	overflow:hidden;
 }
 
 a {
