--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -1,6 +1,6 @@
 .homepage-view
 {
-	position: relative;
+	position: absolue;
 	min-width: 970px;
 	text-align: center;
 	margin-left: auto;
